--- a/to-do-list/src/index.css
+++ b/to-do-list/src/index.css
@@ -1,5 +1,8 @@
 body{
-  background:linear-gradient(to right, hsl(39, 100%, 69%), hsl(60, 100%, 69%));
+  background-image: radial-gradient(circle, #000d21, #031529, #031b32, #02223b, #002844);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   text-align: center;
   margin-top: 100px;
   display: flex;
@@ -80,8 +83,8 @@ ol{
 }
 
 li{
-  display: flex;               /* Enable flex layout */
-  align-items: center;         /* Vertically center content */
+  display: flex;
+  align-items: center;       
   justify-content: space-between;
   margin-bottom: 10px;
   font-size: 1.5rem;
