--- a/browser-extension-ui/style.css
+++ b/browser-extension-ui/style.css
@@ -153,6 +153,7 @@ body{
 }
 
 .toggle{
+    position: relative;
     background-color: rgba(112,112,112,0.18);
     width: 44px;
     height: 24px;
@@ -168,14 +169,19 @@ body{
 
 .toggle-slider{
     background-color: #fff7e6;
-    position:absolute;
-    left:3px; 
-    top:3px;
-    width:18px;
-    height:18px;
-    border-radius:50%;
+    position: absolute;
+    left: 3px; 
+    top: 3px;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
     transition: left .18s cubic-bezier(.2,.9,.2,1), transform .18s ease;
     box-shadow: 0 4px 10px rgba(2,6,23,0.45);
+}
+
+.toggle.on .toggle-slider{
+  left: 23px;
+  background-color: greenyellow;
 }
 
 .description h4{ 
